# ranked-choice-plurality-voting-system

./: README.md
Project1/src/: Ballot.cc  Ballot.h  CMakeCache.txt  CMakeLists.txt  Candidate.cc  Candidate.h  ElectionRecord.cc  ElectionRecord.h  Makefile  Makefile.bryan_cmake  STVCandidate.cc  STVCandidate.h  STVElectionRecord.cc  STVElectionRecord.cpp  STVElectionRecord.h  STVElectionRecord_UT.cc  VotingSystem  ballot.cc  ballot.h  ballot_file_processor.cc  ballot_file_processor.h  candidate.cc  candidate.h  cmake_install.cmake  election.cc  election.h  election_record.cc  election_record.cc.old  election_record.h  election_record.h.old  logger_UT.cc  mainpage.h  makefile  plurality_election.cc  plurality_election_record.cc  plurality_election_record.h  result_display.h  stvElectionRecordUtils.cc  stv_election.cc  stv_election.h  (+6 more)
Project1/testing/: BallotFileTests_Constructor.docx  BallotFileTests_ProcessPluralityBallots.docx  BallotFileTests_ProcessSTVBallots.docx  Ballot_Constructor.docx  Ballot_GetId.docx  Ballot_GetRankedCandidateList.docx  CMakeLists.txt  Candidate_AddBallot.docx  Candidate_Constructor.docx  Candidate_GetId.docx  Candidate_GetName.docx  Candidate_GetNumBallots.docx  Candidate_IncrementNumBallots.docx  Logger_Constructor.docx  Logger_GetLogFile.docx  Logger_LogToFile.docx  Makefile  Makefile.CMake  PluralityElectionRecord_GetLosersList.docx  PluralityElectionRecord_GetWinnersList.docx  PluralityElectionRecord_MoveFirstNCandidates.docx  PluralityElectionRecord_MoveToLosersList.docx  Plurality_Election_Record_sortNonElectedCandidateList_reorder.docx  Plurality_Election_record_breakties.docx  Plurality_election_record_Distribute_ballots.docx  Plurality_election_record_SortNonElectedCandidateList.docx  Plurality_election_record_constructor.docx  Plurality_system_test.docx  STVCandidate_AddBallot.docx  STVCandidate_Constructor.docx  STVCandidate_GetFirstBallotNum.docx  STVCandidate_GetId.docx  STVCandidate_GetName.docx  STVCandidate_GetNumBallots.docx  STVCandidate_IncrementNumBallots.docx  STVCandidate_RemoveBallotList.docx  STVCandidate_SetFirstBallotNum.docx  STVCandidate_SetNumBallotZero.docx  STVElectionRecord_UT.cc  STV_Election_Record_UnitTest1.docx  (+13 more)
Project2/testing/: CMakeLists.txt  Makefile  SystemTest.sh  invalid_ballots.csv  pluralityLCandidateNames_10000ballots_10candidates.csv  pluralityLCandidateNames_1000ballots_10candidates.csv  pluralityLCandidateNames_110ballots_5candidates.csv  pluralityLCandidateNames_120ballots_8candidates.csv  pluralityLCandidateNames_20ballots_5candidates.csv  pluralityLCandidateNames_5000ballots_8candidates.csv  pluralityLCandidateNames_500ballots_5candidates.csv  plurality_10000ballots_10candidates.csv  plurality_1000ballots_10candidates.csv  plurality_110ballots_5candidates.csv  plurality_120ballots_8candidates.csv  plurality_20ballots_5candidates.csv  plurality_5000ballots_8candidates.csv  plurality_500ballots_5candidates.csv  plurality_ballot_file.csv  plurality_ballot_file_1000ballots_10candidates.csv  plurality_ballot_file_1000ballots_5candidates.csv  plurality_ballot_file_1000ballots_8candidates.csv  plurality_ballot_file_5000ballots_5candidates.csv  plurality_ballots.csv  stv.csv  stvLCanNames_10000ballots_10candidates_0pctBadBallots.csv  stvLCanNames_10000ballots_10candidates_20pctBadBallots.csv  stvLCanNames_1000ballots_10candidates_0pctBadBallots.csv  stvLCanNames_1000ballots_10candidates_10pctBadBallots.csv  stvLCanNames_100ballots_5candidates_0pctBadBallots.csv  stvLCanNames_120ballots_8candidates_20pctBadBallots.csv  stvLCanNames_20ballots_5candidates_0pctBadBallots.csv  stvLCanNames_20ballots_5candidates_10pctBadBallots.csv  (+24 more)
(+452 files in other folders)
